[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://FixedMover.gd" type="Script" id=2]
[ext_resource path="res://counters.gd" type="Script" id=3]
[ext_resource path="res://Renderer.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]

resource_name = "Move"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Mover:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 280 ), Vector2( 260, 280 ), Vector2( 360, 280 ), Vector2( 460, 280 ), Vector2( 560, 280 ), Vector2( 660, 280 ), Vector2( 760, 280 ) ]
}

[node name="RenderTestScene" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Mover" type="Sprite" parent="."]

position = Vector2( 160, 280 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Arrow" type="Sprite" parent="Mover"]

modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 10 )
scale = Vector2( 0.05, 1 )
z = -1
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z" ]

[node name="ProcessMover" type="Sprite" parent="."]

modulate = Color( 0.360504, 1, 0.355469, 1 )
position = Vector2( 160, 480 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Arrow" type="Sprite" parent="ProcessMover"]

modulate = Color( 0.148438, 1, 0, 1 )
self_modulate = Color( 0.145098, 1, 0, 1 )
position = Vector2( 0, -60 )
scale = Vector2( 0.05, 1.5 )
z = -1
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z" ]

[node name="Counters" type="Node2D" parent="."]

position = Vector2( 343.462, 198.023 )
script = ExtResource( 3 )

[node name="GameTimePassed" type="Label" parent="Counters"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -66.0
margin_top = -27.0
margin_right = 69.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "GameTimePassed : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FixedProcessCalls" type="Label" parent="Counters"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -73.0
margin_top = -11.0
margin_right = 69.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Fixed Process Calls : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ProcessCalls" type="Label" parent="Counters"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -34.0
margin_top = 4.0
margin_right = 69.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Process calls : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SystemFps" type="Label" parent="Counters"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -24.0
margin_top = 18.0
margin_right = 79.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "System FPS : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TimeCount0" type="Label" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.185678
anchor_right = 1.0
anchor_bottom = 0.185678
margin_left = 120.0
margin_top = 372.573
margin_right = 130.0
margin_bottom = 387.573
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="Arrow" type="Sprite" parent="TimeCount0"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -35 )
scale = Vector2( 0.02, 1 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TimeCount1" type="Label" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.185678
anchor_right = 1.0
anchor_bottom = 0.185678
margin_left = 220.0
margin_top = 372.573
margin_right = 230.0
margin_bottom = 387.573
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="Arrow" type="Sprite" parent="TimeCount1"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -35 )
scale = Vector2( 0.02, 1 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TimeCount2" type="Label" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.185678
anchor_right = 1.0
anchor_bottom = 0.185678
margin_left = 320.0
margin_top = 372.573
margin_right = 330.0
margin_bottom = 387.573
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="Arrow" type="Sprite" parent="TimeCount2"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -35 )
scale = Vector2( 0.02, 1 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TimeCount3" type="Label" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.185678
anchor_right = 1.0
anchor_bottom = 0.185678
margin_left = 420.0
margin_top = 372.573
margin_right = 430.0
margin_bottom = 387.573
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="Arrow" type="Sprite" parent="TimeCount3"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -35 )
scale = Vector2( 0.02, 1 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TimeCount4" type="Label" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.185678
anchor_right = 1.0
anchor_bottom = 0.185678
margin_left = 520.0
margin_top = 372.573
margin_right = 530.0
margin_bottom = 387.573
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="Arrow" type="Sprite" parent="TimeCount4"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -35 )
scale = Vector2( 0.02, 1 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TimeCount5" type="Label" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.185678
anchor_right = 1.0
anchor_bottom = 0.185678
margin_left = 620.0
margin_top = 372.573
margin_right = 630.0
margin_bottom = 387.573
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="Arrow" type="Sprite" parent="TimeCount5"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -35 )
scale = Vector2( 0.02, 1 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TimeCount6" type="Label" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.185678
anchor_right = 1.0
anchor_bottom = 0.185678
margin_left = 720.0
margin_top = 372.573
margin_right = 730.0
margin_bottom = 387.573
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "6"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="Arrow" type="Sprite" parent="TimeCount6"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -35 )
scale = Vector2( 0.02, 1 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="MoveAnimation" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/Move = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Move"
_sections_unfolded = [ "Playback Options" ]

[node name="Renderer" type="Node2D" parent="."]

script = ExtResource( 4 )


